cleaning up and comments

--- a/Views/Home/EgyptLaw.cshtml
+++ b/Views/Home/EgyptLaw.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Egypt Data Protection Law";
 }
 
+@*Web page for explaining the Egypt Data law*@
+
 <head>
     <title>Egypt's Personal Data Protection Law</title>
 </head>
