--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,6 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+@*web page for explaining the privacy policy*@
+
 <style>
     [data-custom-class='body'], [data-custom-class='body'] * {
         background: transparent !important;
